--- a/index.html
+++ b/index.html
@@ -13147,7 +13147,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2> Introduction </h2><h3> Motivation </h3><p>For this project, we thought it would be interesting to look at how certain statistics affect the overall success of teams in the NBA. From a time where short shorts and converse were the standard, the game of basketball has evolved tremendously over the past 125 years. It is easy to point out key differences in style of play when comparing an NBA game from the 1940s versus a game today, but what about over the past  decades? By analyzing team statistics, we hope to dig deeper into how the game of basketball has changed over the course of the last 20 years. Without further ado, lets get after it.</p>
+<h2> Introduction </h2><h3> Motivation </h3><p>For this project, we thought it would be interesting to look at how certain statistics affect the overall success of teams in the NBA. From a time where short shorts and converse were the standard, the game of basketball has evolved tremendously over the past 125 years. It is easy to point out key differences in style of play when comparing an NBA game from the 1940s versus a game today, but what about over the past  decades? By analyzing team statistics, we hope to dig deeper into how the game of basketball has changed over the course of the last 20 years. Without further ado, lets get into it.</p>
 <p><img src="https://media.giphy.com/media/Swg9RjnUdGIAoSboNP/giphy.gif" alt="SegmentLocal"></p>
 <h4> Key aspects of project: </h4><ul>
 <li>Data collection</li>
